--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "udany-toolbox",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"description": "Collection of utilities",
 	"main": "index.js",
 	"scripts": {},
@@ -11,6 +11,12 @@
 		"@vueuse/integrations": "^5.1.3"
 	},
 	"peerDependencies": {
-		"vue": "^3.x.x"
+		"vue": "^3.x.x",
+		"mysql2": "^2.3.0"
+	},
+	"peerDependenciesMeta": {
+		"mysql2": {
+			"optional": true
+		}
 	}
 }
