--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "udany-toolbox",
-	"version": "1.1.0",
+	"version": "1.2.0",
 	"description": "Collection of utilities",
 	"main": "index.js",
 	"scripts": {},
@@ -8,15 +8,10 @@
 	"license": "ISC",
 	"dependencies": {
 		"@vueuse/core": "^4.11.2",
-		"@vueuse/integrations": "^5.1.3"
-	},
-	"peerDependencies": {
-		"vue": "^3.x.x",
+		"@vueuse/integrations": "^5.1.3",
 		"mysql2": "^2.3.0"
 	},
-	"peerDependenciesMeta": {
-		"mysql2": {
-			"optional": true
-		}
+	"peerDependencies": {
+		"vue": "^3.x.x"
 	}
 }
