--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.35",
+		"@fortawesome/free-solid-svg-icons": "^5.15.3",
+		"@fortawesome/vue-fontawesome": "^3.0.0-3",
 		"@vueuse/core": "^4.11.2",
 		"@vueuse/integrations": "^5.1.3",
 		"mysql2": "^2.3.0"
