--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
 		"@fortawesome/vue-fontawesome": "^3.0.0-3",
 		"@vueuse/core": "^4.11.2",
 		"@vueuse/integrations": "^5.1.3",
-		"mysql2": "^2.3.0"
+		"mysql2": "^2.3.0",
+		"passport": "^0.4.1",
+		"passport-google-oauth20": "^2.0.0",
+		"passport-twitter": "^1.0.4"
 	},
 	"peerDependencies": {
 		"vue": "^3.x.x"
