--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
 		"@fortawesome/fontawesome-svg-core": "^1.2.35",
 		"@fortawesome/free-solid-svg-icons": "^5.15.3",
 		"@fortawesome/vue-fontawesome": "^3.0.0-3",
+		"@types/express": "^4.17.13",
+		"@types/express-session": "^1.17.4",
 		"@vueuse/core": "^4.11.2",
 		"@vueuse/integrations": "^5.1.3",
+		"express-session": "^1.17.3",
 		"mysql2": "^2.3.0",
 		"passport": "^0.4.1",
 		"passport-google-oauth20": "^2.0.0",
