--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "udany-toolbox",
-	"version": "2.0.0",
+	"version": "0.2.0",
 	"description": "Collection of utilities",
 	"main": "index.js",
 	"scripts": {},
@@ -14,6 +14,7 @@
 		"@types/express-session": "^1.17.4",
 		"@vueuse/core": "^4.11.2",
 		"@vueuse/integrations": "^5.1.3",
+		"express": "^4.17.3",
 		"express-session": "^1.17.3",
 		"mysql2": "^2.3.0",
 		"passport": "^0.4.1",
