--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@fortawesome/vue-fontawesome": "^3.0.0-3",
 		"@types/express": "^4.17.13",
 		"@types/express-session": "^1.17.4",
+		"@types/passport": "^1.0.9",
 		"@vueuse/core": "^4.11.2",
 		"@vueuse/integrations": "^5.1.3",
 		"express": "^4.17.3",
