--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"mysql2": "^2.3.3",
 		"passport": "^0.4.1",
 		"passport-google-oauth20": "^2.0.0",
+		"passport-local": "^1.0.0",
 		"passport-twitter": "^1.0.4"
 	},
 	"peerDependencies": {
